--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "prettier": "^1.19.1",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.4.0",
-    "stylelint": "^12.0.1",
-    "stylelint-prettier": "^1.1.2"
+    "stylelint": "^12.0.1"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
