--- a/package.json
+++ b/package.json
@@ -91,9 +91,11 @@
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "cosmiconfig": "^6.0.0",
+    "flat": "^5.0.0",
     "postcss": "^7.0.27",
     "postcss-calc": "^7.0.2",
     "postcss-color-mod-function": "^3.0.3",
+    "postcss-conditionals": "^2.1.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-custom-properties": "^9.1.1",
     "postcss-extend-rule": "^3.0.0",
