--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-classes"]
+    "plugins": [
+        "@babel/plugin-transform-classes",
+        "@babel/plugin-transform-block-scoping",
+        "@babel/plugin-transform-for-of",
+        "@babel/plugin-transform-template-literals"
+    ]
 }
