added new script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "gulp server",
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint js/** --fix",
-    "lint:css": "stylelint \"**/*.scss\" --fix"
+    "lint:css": "stylelint \"**/*.scss\" --fix",
+    "publish": "np"
   },
   "files": [
     "./dist/**/*",
