--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "gulp server",
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint js/** --fix",
-    "lint:css": "stylelint \"**/*.scss\" --fix",
+    "lint:css": "stylelint \"**/*.scss\" --fix"
   },
   "files": [
     "dist",
