--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
   ],
   "author": "TheComputerM",
   "license": "MIT",
-  "np": {
-    "yolo": true
-  },
   "bugs": {
     "url": "https://github.com/TheComputerM/empyreal/issues"
   },
@@ -51,7 +48,6 @@
     "gulp": "^4.0.2",
     "gulp-nunjucks": "^5.0.1",
     "gulp-rename": "^2.0.0",
-    "np": "^5.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "stylelint": "^12.0.1"
@@ -88,6 +84,7 @@
     }
   },
   "dependencies": {
+    "@babel/core": "^7.9.0",
     "@babel/plugin-transform-arrow-functions": "^7.8.3",
     "@babel/plugin-transform-block-scoping": "^7.8.3",
     "@babel/plugin-transform-classes": "^7.9.5",
