--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "README.md",
     "LICENSE"
   ],
-  "bin": {
-    "empyreal": "./utils/cli.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TheComputerM/empyreal.git"
@@ -50,7 +47,33 @@
     "gulp-rename": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "stylelint": "^12.0.1"
+    "stylelint": "^12.0.1",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-arrow-functions": "^7.8.3",
+    "@babel/plugin-transform-block-scoping": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/plugin-transform-for-of": "^7.9.0",
+    "@babel/plugin-transform-template-literals": "^7.8.3",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "autoprefixer": "^9.7.6",
+    "chalk": "^4.0.0",
+    "cosmiconfig": "^6.0.0",
+    "flat": "^5.0.0",
+    "postcss": "^7.0.27",
+    "postcss-calc": "^7.0.2",
+    "postcss-clean": "^1.1.0",
+    "postcss-color-mod-function": "^3.0.3",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-custom-properties": "^9.1.1",
+    "postcss-extend-rule": "^3.0.0",
+    "postcss-for": "^2.1.1",
+    "postcss-functions": "^3.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-js": "^2.0.3",
+    "postcss-nested": "^4.2.1",
+    "rollup": "^2.6.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^5.3.0"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -82,33 +105,5 @@
       "browser": true,
       "es6": true
     }
-  },
-  "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-arrow-functions": "^7.8.3",
-    "@babel/plugin-transform-block-scoping": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.9.5",
-    "@babel/plugin-transform-for-of": "^7.9.0",
-    "@babel/plugin-transform-template-literals": "^7.8.3",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "autoprefixer": "^9.7.6",
-    "chalk": "^4.0.0",
-    "cosmiconfig": "^6.0.0",
-    "flat": "^5.0.0",
-    "postcss": "^7.0.27",
-    "postcss-calc": "^7.0.2",
-    "postcss-clean": "^1.1.0",
-    "postcss-color-mod-function": "^3.0.3",
-    "postcss-custom-media": "^7.0.8",
-    "postcss-custom-properties": "^9.1.1",
-    "postcss-extend-rule": "^3.0.0",
-    "postcss-for": "^2.1.1",
-    "postcss-functions": "^3.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-js": "^2.0.3",
-    "postcss-nested": "^4.2.1",
-    "rollup": "^2.6.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0"
   }
 }
