--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "empyreal",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Empyreal CSS is a HTML, CSS, and JavaScript framework based on Material Design for developing responsive and beautiful websites.",
   "main": "dist/js/ethereal.umd.js",
   "scripts": {
@@ -38,16 +38,6 @@
   },
   "homepage": "https://github.com/TheComputerM/empyreal#readme",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "browser-sync": "^2.26.7",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "gulp": "^4.0.2",
-    "gulp-nunjucks": "^5.0.1",
-    "gulp-rename": "^2.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "stylelint": "^12.0.1",
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-arrow-functions": "^7.8.3",
     "@babel/plugin-transform-block-scoping": "^7.8.3",
@@ -56,9 +46,17 @@
     "@babel/plugin-transform-template-literals": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.1.0",
     "autoprefixer": "^9.7.6",
+    "babel-eslint": "^10.1.0",
+    "browser-sync": "^2.26.7",
     "chalk": "^4.0.0",
     "cosmiconfig": "^6.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
     "flat": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-nunjucks": "^5.0.1",
+    "gulp-rename": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.27",
     "postcss-calc": "^7.0.2",
     "postcss-clean": "^1.1.0",
@@ -71,9 +69,11 @@
     "postcss-import": "^12.0.1",
     "postcss-js": "^2.0.3",
     "postcss-nested": "^4.2.1",
+    "prettier": "^1.19.1",
     "rollup": "^2.6.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "stylelint": "^12.0.1"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
